--- a/pages/newpage.html
+++ b/pages/newpage.html
@@ -37,29 +37,29 @@
 
 <tr>
 <th ><label >Name:</label></th>
-<td><input type="text"></td>
+<td><input type="text" name=""></td>
 </tr>
 <br>
 <tr>
 <th ><label >Employee ID:</label></th>
-<td><input type="text"></td>
+<td><input type="text" name=""></td>
 </tr>
 <br>
 
 <tr>
 <th ><label >DOB:</label></th>
-<td><input type="date"></td>
+<td><input type="date" name=""></td>
 </tr>
 <br>
 <tr>
 <th><label>Phone Number:</label></th>
-<td><input type="number" maxlength="10"></td>
+<td><input type="number" name="" maxlength="10"></td>
 </tr>
 <br>
 
 <tr>
 <th><label>Email ID:</label></th>
-<td><input type="text"></td>
+<td><input type="text" name=""></td>
 </tr>
 
 </table>
