--- a/pages/newpage.html
+++ b/pages/newpage.html
@@ -37,29 +37,29 @@
 
 <tr>
 <th ><label >Name:</label></th>
-<td><input type="text" name=""></td>
+<td><input type="text" name="name"></td>
 </tr>
 <br>
 <tr>
 <th ><label >Employee ID:</label></th>
-<td><input type="text" name=""></td>
+<td><input type="text" name="id"></td>
 </tr>
 <br>
 
 <tr>
 <th ><label >DOB:</label></th>
-<td><input type="date" name=""></td>
+<td><input type="date" name="dob"></td>
 </tr>
 <br>
 <tr>
 <th><label>Phone Number:</label></th>
-<td><input type="number" name="" maxlength="10"></td>
+<td><input type="number" name="num" maxlength="10"></td>
 </tr>
 <br>
 
 <tr>
 <th><label>Email ID:</label></th>
-<td><input type="text" name=""></td>
+<td><input type="text" name="eid"></td>
 </tr>
 
 </table>
